# CogniPulse

./: .env  README.md  docker-compose.yml  show_tables.py
CogniPulse_NoLLM_MCP/: README.md  docker-compose.yml
CogniPulse_NoLLM_MCP/.devcontainer/: devcontainer.json  docker-compose.yml
CogniPulse_NoLLM_MCP/docs/: ARCHITECTURE.md
CogniPulse_NoLLM_MCP/services/cpp-analyzer/: CMakeLists.txt  Dockerfile  main.cpp
CogniPulse_NoLLM_MCP/services/event-simulator/: Dockerfile  sim.py
CogniPulse_NoLLM_MCP/services/mcp-server/o11y/: tracer.yaml
CogniPulse_NoLLM_MCP/services/mcp-server/resources/processors/: get_latest_actions.yaml  get_latest_alerts.yaml  publish_test_event.yaml
CogniPulse_NoLLM_MCP/services/rule-engine/: Dockerfile  requirements.txt
CogniPulse_NoLLM_MCP/services/rule-engine/app/: main.py
agent/: Dockerfile  agent.py  ollama_client.py  policy.py
analyzer/: CMakeLists.txt  Dockerfile
analyzer/src/: analyzer.cpp
db/: init.sql
mcp_server/: Dockerfile  server.py
persistence/: Dockerfile  db_writer.py  schema.sql
services/cpp-analyzer/: CMakeLists.txt  Dockerfile  main.cpp
services/event-simulator/: simulator.py
services/llm-reasoner/: Dockerfile  app.py
services/mcp-server/: requirements.txt  server.py
services/rule-engine/: Dockerfile  engine.py
services/visibility/: app.py
simulator/: Dockerfile  simulator.py
